--- a/client/src/components/ProfileBioTabs/profilebiotabs.css
+++ b/client/src/components/ProfileBioTabs/profilebiotabs.css
@@ -25,3 +25,8 @@
     background-color: var(--blueBackground);
     transition: color 0.25s ease-in-out, background-color 0.5s ease-in-out;
 }
+
+.noTweetError {
+    text-align: center;
+    padding-top: var(--spacing);
+}
