--- a/client/src/components/MainFeed/mainfeed.css
+++ b/client/src/components/MainFeed/mainfeed.css
@@ -1,8 +1,3 @@
-:root {
-    --lightGrey: rgb(230, 236, 240);
-    --spacing: 15px;
-}
-
 .titleContainerTitle {
     font-size: 19px;
     font-weight: 800;
@@ -24,23 +19,22 @@
     padding: 0px var(--spacing);
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--lightGrey);
     justify-content: center;
+    border-bottom: 1px solid var(--lightGrey);
 }
 
 .titleContainer h1 {
     flex: 1;
+    margin-bottom: 2px;
 }
 
 .profileBackArrow {
     margin-right: var(--spacing);
-    padding: 4px;
+    color: black;
 }
 
 .profileBackArrow:hover {
-    padding: 4px;
-    background-color: var(--lightGrey);
-    border-radius: 50%;
+    color: var(--twitter-blue);
     cursor: pointer;
-    transition: ease-in-out background-color .25s;
+    transition: var(--transition-ease);
 }
