--- a/client/src/components/Posts/posts.css
+++ b/client/src/components/Posts/posts.css
@@ -1,9 +1,3 @@
-:root {
-    --greyText: rgb(101, 119, 134);
-    --greyButtonText: rgba(0,0,0, 0.34);
-    --transitionSetting: ease-in-out .2s;
-}
-
 .post {
     display: flex;
     flex-direction: column;
@@ -83,7 +77,7 @@ button {
 
 .commentButtonBlue:hover {
     color: var(--twitter-blue);
-    transition: var(--transitionSetting);
+    transition: var(--transition-ease);
 }
 
 .likeButtonRed {
@@ -92,7 +86,7 @@ button {
 
 .likeButtonHover:hover {
     color: red;
-    transition: var(--transitionSetting);
+    transition: var(--transition-ease);
 }
 
 .retweetButtonGreen {
@@ -101,7 +95,7 @@ button {
 
 .retweetButtonHover:hover {
     color: green;
-    transition: var(--transitionSetting);
+    transition: var(--transition-ease);
 }
 
 .postActionContainer {
@@ -112,28 +106,33 @@ button {
     font-size: 13px;
     color: var(--greyText);
     padding-bottom: 3px;
-    
 }
 
 .postActionContainerLink {
     text-decoration: none;
     padding-right: 3px;
+    font-weight: bold;
+    color: var(--twitter-blue)
 }
 
 .postActionContainerLink:hover {
     text-decoration: underline;
     padding-right: 3px;
+    cursor: pointer;
+}
+
+.postActionContainerText {
+    color: var(--greyText);
 }
 
 .postUserImageContainer {
-    width: 50px;
-    height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .postUserImageContainer img {
-    width: 100%;
+    width: 50px;
     height: 50px;
     border-radius: 50%;
     /* If the user uploads a PNG with a transparent background, need the background to be white as well. */
@@ -142,4 +141,5 @@ button {
 
 .postActionContainerIcon {
     padding-right: 3px;
+    color: var(--greyText);
 }
