--- a/client/src/components/ProfileComponents/ProfileHeader/profileheader.css
+++ b/client/src/components/ProfileComponents/ProfileHeader/profileheader.css
@@ -1,17 +1,37 @@
 .profileHeaderContainer {
     height: 180px;
-    background-color: var(--twitter-blue);
     position: relative;
 }
 
 .coverPhotoContainer {
+    height: 180px;
+    display: flex;
     position: relative;
+    align-items: center;
+    justify-content: center;
+}
+
+.coverPhotoContainer img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.coverPhotoIcon {
+    position: absolute;
+    justify-self: center;
+    align-self: center;
+    font-size: 50px;
+    color: rgba(0,0,0,0.6);
 }
 
 .profileUserImageContainer {
     position: absolute;
     top: 114px;
     margin-left: var(--spacing);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .profileUserImageContainer img {
@@ -19,9 +39,6 @@
     width: 132px;
     border-radius: 50%;
     border: 4px solid #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .profilePictureButton {
@@ -31,6 +48,11 @@
     font-size: 50px;
     color: rgba(0,0,0,0.6);
     left: 41px;
+}
+
+.coverPhotoButton {
+    font-size: 50px;
+    color: rgba(0,0,0,0.6);
 }
 
 .profileButtonsContainer {
