--- a/client/src/components/Tweet/tweet.css
+++ b/client/src/components/Tweet/tweet.css
@@ -11,6 +11,11 @@
     gap: 7px;
 }
 
+.pinnedPostText {
+    font-size: 12px;
+    color: var(--greyText)
+}
+
 .deleteButton {
     padding-right: 3px;
 }
