after a long fight with framer motion I am victorious

--- a/client/src/pages/Inbox/inbox.css
+++ b/client/src/pages/Inbox/inbox.css
@@ -37,5 +37,5 @@
 .selectedUserContainer {
     display: flex;
     padding: 10px;
-    gap: calc(var(--spacing) / 2);
+    gap: calc(var(--spacing));
 }
