--- a/client/src/components/UserSearchCard/usersearchcard.css
+++ b/client/src/components/UserSearchCard/usersearchcard.css
@@ -7,7 +7,9 @@
     text-align: center;
     position: relative;
     box-shadow: 0 0 0 2px var(--blueLight);
-    transition: box-shadow 0.2s ease-in-out;
+    transition: box-shadow 0.2s ease-in-out, transform 0.3s ease-in-out;
+    transform: scale(0);
+    opacity: 0;
   }
 
   .userSearchCard:hover {
