--- a/client/src/components/UserSearchCard/usersearchcard.css
+++ b/client/src/components/UserSearchCard/usersearchcard.css
@@ -7,6 +7,7 @@
         transition: box-shadow 0.2s ease-in-out, transform 0.3s ease-in-out;
         height: 90px;
         max-width: 100%;
+        min-width: 100%;
     }
   
     .userSearchCardInfo {
