--- a/client/src/pages/Inbox/inbox.css
+++ b/client/src/pages/Inbox/inbox.css
@@ -42,6 +42,12 @@
     padding: 5px;
 }
 
+@media only screen and (max-width: 1200px) {
+    .selectedUserContainer {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .selectedUserContainer {
         grid-template-columns: repeat(3, 1fr);
