--- a/client/src/app.css
+++ b/client/src/app.css
@@ -10,6 +10,22 @@
     --spacing: 15px;
 }
 
+html, body {
+    height: 100%;
+    min-height: 100%;
+    background-color: #fff;
+    font-weight: 300;
+}
+
+#root, .container {
+    height: 100%;
+}
+
+.flex {
+    display: flex;
+    flex-direction: column;
+}
+
 ul, li {
     list-style: none;
 }
@@ -17,6 +33,10 @@ ul, li {
 .row > *, .col {
     margin: 0 !important;
     padding: 0 !important;
+}
+
+.row {
+    height: 100%;
 }
 
 .noPadding {
