--- a/client/src/pages/Chat/chat.css
+++ b/client/src/pages/Chat/chat.css
@@ -20,7 +20,6 @@
 #chatName {
     width: 100%;
     border: 1px solid transparent;
-    padding: 0 5px;
 }
 
 #chatName:hover {
@@ -32,7 +31,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 .chatContainer .footer {
@@ -47,7 +46,7 @@
     border-radius: 18px;
     border: none;
     height: 38px;
-    padding: 5px 10px;
+    padding: 7px 15px;
 }
 
 .chatContainer .footer button {
@@ -59,4 +58,7 @@
 .chatMessages {
     display: flex;
     flex: 1;
+    overflow-y: auto;
+    flex-direction: column;
+    padding: var(--spacing);
 }
