ability to edit a chat title

--- a/client/src/components/ChatBubble/chatheader.css
+++ b/client/src/components/ChatBubble/chatheader.css
@@ -27,3 +27,9 @@
     font-size: 14px;
     border: 2px solid #fff;
 }
+
+.chatTitle {
+    margin-left: var(--spacing);
+    border: 1px solid transparent;
+    cursor: pointer;
+}
