--- a/client/src/pages/Chat/chat.css
+++ b/client/src/pages/Chat/chat.css
@@ -22,6 +22,7 @@
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
+    max-height: 85vh; /* this needs to be a more appropriate height */
 }
 
 .chatContainer .footer {
@@ -38,7 +39,6 @@
     height: 38px;
     padding: 7px 15px;
     white-space: nowrap;
-    overflow-y: scroll;
     overflow: hidden;
 }
 
@@ -49,9 +49,9 @@
 }
 
 .chatMessages {
-    display: flex;
     flex: 1;
-    overflow-y: auto;
+    display: flex;
     flex-direction: column;
+    overflow-y: auto;
     padding: var(--spacing);
 }
