--- a/client/src/components/Tweet/tweet.css
+++ b/client/src/components/Tweet/tweet.css
@@ -1,3 +1,44 @@
+.tweet {
+    display: flex;
+    flex-direction: column;
+    padding: var(--spacing);
+    border-bottom: 1px solid var(--lightGrey);
+    flex-shrink: 0;
+    background-color: rgb(255,255,255);
+}
+  
+.tweet:hover {
+    background-color: rgba(29, 161, 242, 0.15);
+    transition: background-color 0.2s ease-in-out;
+}
+
+.tweetContainer {
+    display: flex;
+    flex: 1;
+    overflow-y: hidden;
+}
+
+.tweetBody {
+    cursor: pointer;
+}
+
+.tweetContent {
+    margin-left: var(--spacing);
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.headerLink {
+    text-decoration: none;
+    font-weight: bold;
+    padding-right: 5px;
+}
+
+.headerLink:hover {
+    text-decoration: underline;
+}
+
 .tweetUserInfo {
     display: flex;
     flex: 1;
@@ -32,14 +73,6 @@
     color: var(--twitter-blue);
 }
 
-.post {
-    background-color: transparent;
-}
-  
-.hovered {
-    background-color: rgba(29, 161, 242, 0.15);
-    transition: background-color 0.2s ease-in-out;
-}
 
 .linkHovered {
     background-color: rgba(29, 161, 242, 0.01355);
